[package]
name = "gway"
version = "0.2.0"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0/gway.git"
homepage = "https://github.com/js0/gway/tree/main/gway"
description = "gway"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aok = "0.1.17"
compio = "0.16.1"
evmap = "11.0.0"
log = "0.4.27"
log_init = "0.1.9"
mimalloc = { version = "0.1.48", features = ["v3"] }
xboot = "0.1.28"
xkv = { version = "0.1.50", features = ["r"] }

[dev-dependencies]
aok = "0.1.17"
log = "0.4.27"
log_init = "0.1.9"
static_init = "1.0.4"

[dev-dependencies.tokio]
version = "1.46.1"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
